--- a/datadump/templates/datadump/post/detail.html
+++ b/datadump/templates/datadump/post/detail.html
@@ -9,11 +9,11 @@
         <div class="card-header">
             <h3>{{ post.title }}</h3>
         </div>
-        <a class="card-body">
+        <div class="card-body">
             {% with post.body|markdown|safe as body %}
             <p>{{ body }}</p>
-                <img src="{{ post.image.url }}" alt="{{ post.title }}" style="height: 60px">
             {% endwith %}
+            <img src="{{ post.image.url }}" alt="{{ post.title }}" style="height: 60px">
             <h6><a href="/accounts/profile/{{post.author.id}}"><b class="user-bold">@{{ post.author }}</b></a> -
                 {{post.publish}}</h6>
             {% for tag in post.tags.all %}
