--- a/datadump/templates/datadump/post/detail.html
+++ b/datadump/templates/datadump/post/detail.html
@@ -13,11 +13,13 @@
             {% with post.body|markdown|safe as body %}
             <p>{{ body }}</p>
             {% endwith %}
+            {% if post.image.url is not None %}
             <img src="{{ post.image.url }}" alt="{{ post.title }}" style="height: 60px">
-            <h6><a href="/accounts/profile/{{post.author.id}}"><b class="user-bold">@{{ post.author }}</b></a> -
+            {% endif %}
+            <h6><a href="{% url 'profile_visit' post.author.id %}"><b class="user-bold">@{{ post.author }}</b></a> -
                 {{post.publish}}</h6>
             {% for tag in post.tags.all %}
-            <a href="/datadump/tag/{{tag.slug}}">
+            <a href="{% url 'datadump:post_list_tag' tag.slug %}">
                 <button class="btn btn-primary btn-tag" data-toggle="tooltip" data-placement="bottom"
                         title="This is the {{ tag.name }} tag">{{tag}}
                 </button>
@@ -61,10 +63,10 @@
             <b class="post-likes">{{ post_score.score }}</b>
             {% endif %}
             {% else %}
-            <a href="/accounts/login/?next={{ post.get_absolute_url }}">
+            <a href="{% url 'login' %}?next={{ post.get_absolute_url }}">
                 <button type="button" class="fa fa-thumbs-up transparent-button" style="font-size: 30px;"></button>
             </a>
-            <a href="/accounts/login/?next={{ post.get_absolute_url }}">
+            <a href="{% url 'login' %}?next={{ post.get_absolute_url }}">
                 <button type="button" class="fa fa-thumbs-down transparent-button" style="font-size: 30px;"></button>
             </a>
             <b class="post-likes">{{ post_score.score }}</b>
@@ -124,13 +126,13 @@
                     data-placement="right" title="This answer is not useful"></button>
             {% endif %}
             {% else %}
-            <a href="/accounts/login/?next={{ post.get_absolute_url }}">
+            <a href="{% url 'login' %}?next={{ post.get_absolute_url }}">
                 <button type="button" class="fa fa-caret-up transparent-button"></button>
             </a>
             <br>
             {{ score.score }}
             <br>
-            <a href="/accounts/login/?next={{ post.get_absolute_url }}">
+            <a href="{% url 'login' %}?next={{ post.get_absolute_url }}">
                 <button type="button" class="fa fa-caret-down transparent-button"></button>
             </a>
             {% endif %}
@@ -199,7 +201,7 @@
         <div class="card-body">
             {% get_most_tags 5 as tags %}
             {% for item in tags %}
-            <a href="/datadump/tag/{{ item.slug }}">
+            <a href="{% url 'datadump:post_list_tag' item.slug %}">
                 <p>• {{ item.name }}</p>
             </a>
             {% endfor %}
