--- a/datadump/templates/datadump/post/create_post.html
+++ b/datadump/templates/datadump/post/create_post.html
@@ -5,8 +5,8 @@
 
 {% block title %}Ask a Question{{ post.title }}{% endblock %}
 {% block content %}
-    <script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
-    <script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
+    <script type="text/javascript" src="{% static 'ckeditor/ckeditor-init.js' %}"></script>
+    <script type="text/javascript" src="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script>
     <div class="container-lg">
         <div class="card" style="background-color: rgba(0,0,0,.03);">
             <div class="card-body">
