--- a/datadump/templates/datadump/post/list.html
+++ b/datadump/templates/datadump/post/list.html
@@ -17,7 +17,7 @@
         </a>
         <div class="card-body">
             {% with post.body|markdown|safe as body %}
-            <p>{{ body }}</p>
+            <p>{{ body|truncatewords_html:30 }}</p>
             {% endwith %}
             <h6><a href="{% url 'profile_visit' post.author.id %}"><b class="user-bold">@{{ post.author }}</b></a> - {{ post.publish }}</h6>
             {% for tag in post.tags.all %}
