--- a/datadump/static/datadump/styles/base.css
+++ b/datadump/static/datadump/styles/base.css
@@ -165,3 +165,6 @@ blockquote{border-left: 4px solid gray; background: rgba(0,0,0,.03); padding-lef
     .comment-body {width: 88%; float: left}
 }
 .post-likes {background-color: rgba(0,0,0,.09);; border-radius: 50%; padding: 2px 5px; font-size: 20px}
+
+pre {background-color: rgba(0,0,0,.06); padding: 5px}
+code { color: orange;}
