--- a/datadump/templates/datadump/base.html
+++ b/datadump/templates/datadump/base.html
@@ -58,6 +58,9 @@
                 </button>
             </form>
             {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link" style="cursor: pointer; margin: 0px 10px"><i class="fa fa-bell"></i></a>
+            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
                    aria-haspopup="true" aria-expanded="false">
