--- a/datadump/templates/datadump/base.html
+++ b/datadump/templates/datadump/base.html
@@ -27,58 +27,6 @@
     <link rel="stylesheet" href="{% static 'datadump/styles/base.css' %}">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="{% url 'datadump:post_list' %}"><img src="{% static 'datadump/images/logo_bibliostack.png' %}"
-                                                  height="30px" class="logo"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'datadump:post_list' %}">Home</a>
-
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'datadump:create_post' %}">Ask Question</a>
-            </li>
-        </ul>
-        <ul class="navbar-nav">
-            <form class="form-inline" method="get" action="{% url 'datadump:search_posts' %}">
-                <input class="form-control autocomplete" type="search" placeholder="Search" aria-label="Search"
-                       name="search"
-                       autocomplete="off"
-                       value="{{ search }}" required id="search">
-
-                <button class="btn btn-primary my-2 my-sm-0" type="submit">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                         class="bi bi-search" viewBox="0 0 16 16">
-                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-                    </svg>
-                </button>
-            </form>
-            {% if user.is_authenticated %}
-            <li class="nav-item">
-                <a class="nav-link" style="cursor: pointer; margin: 0px 10px"><i class="fa fa-bell"></i></a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    <img src="{{ user.profile.image.url }}" height="25px" style="border-radius: 50%">
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="/accounts/profile/{{ user.id }}">Profile</a>
-                    <a class="dropdown-item" href="/accounts/logout">Log Out</a>
-                </div>
-            </li>
-            {% else %}
-            <li class="nav-item">
-                <a class="nav-link" href="/accounts/login">Log In</a>
-            </li>
-            {% endif %}
-        </ul>
-    </div>
-</nav>
 {% if messages %}
     {% for message in messages %}
     <div class="alert alert-{% if message.tags %}{% if message.tags == 'error' %}danger{% else %}{{ message.tags }}{% endif %}{% endif %} alert-dismissible fade show" role="alert">
@@ -190,6 +138,88 @@
         </div>
     </div>
 </div>
+<nav class="autohide navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="{% url 'datadump:post_list' %}"><img src="{% static 'datadump/images/logo_bibliostack.png' %}"
+                                                  height="30px" class="logo"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'datadump:post_list' %}">Home</a>
+
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'datadump:create_post' %}">Ask Question</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav">
+            <form class="form-inline" method="get" action="{% url 'datadump:search_posts' %}">
+                <input class="form-control autocomplete search-input" type="search" placeholder="Search" aria-label="Search"
+                       name="search"
+                       autocomplete="off"
+                       value="{{ search }}" required id="search">
+
+                <button class="btn btn-primary my-2 my-sm-0 search-input-button" type="submit">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                         class="bi bi-search" viewBox="0 0 16 16">
+                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                    </svg>
+                </button>
+            </form>
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link" style="cursor: pointer; margin: 0px 10px"><i class="fa fa-bell"></i></a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    <img src="{{ user.profile.image.url }}" height="25px" style="border-radius: 50%">
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="/accounts/profile/{{ user.id }}">Profile</a>
+                    <a class="dropdown-item" href="/accounts/logout">Log Out</a>
+                </div>
+            </li>
+            {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="/accounts/login">Log In</a>
+            </li>
+            {% endif %}
+        </ul>
+    </div>
+</nav>
+<script>
+    document.addEventListener("DOMContentLoaded", function(){
+
+  el_autohide = document.querySelector('.autohide');
+  body_content = document.querySelector('.content-body');
+
+  // add padding-top to bady (if necessary)
+  navbar_height = document.querySelector('.navbar').offsetHeight;
+  body_content.style.paddingTop = navbar_height + 'px';
+
+  if(el_autohide){
+    var last_scroll_top = 0;
+    window.addEventListener('scroll', function() {
+          let scroll_top = window.scrollY;
+         if(scroll_top < last_scroll_top) {
+              el_autohide.classList.remove('scrolled-down');
+              el_autohide.classList.add('scrolled-up');
+          }
+          else {
+              el_autohide.classList.remove('scrolled-up');
+              el_autohide.classList.add('scrolled-down');
+          }
+          last_scroll_top = scroll_top;
+    });
+    // window.addEventListener
+  }
+  // if
+
+});
+</script>
 <script>
 $(function() {
     var availableTags = [{% for item in all_posts %}"{{ item.title }}",{% endfor%}
