--- a/datadump/static/datadump/styles/base.css
+++ b/datadump/static/datadump/styles/base.css
@@ -1,110 +1,205 @@
-.content-body{overflow-x: hidden;}
+.content-body {
+    overflow-x: hidden;
+}
+
 .btn-tag {
-padding: 1px 5px !important;
-font-size: 12px !important;
-line-height: 1.5 !important;
-border-radius: 3px !important;
+    padding: 1px 5px !important;
+    font-size: 12px !important;
+    line-height: 1.5 !important;
+    border-radius: 3px !important;
 }
 
 .user-bold {
-color: red;
+    color: red;
 }
-.navbar-dark{background-color: #000000!important}
+
+.navbar-dark {
+    background-color: #000000 !important
+}
+
 a {
-text-decoration: none;
-color: #000;
+    text-decoration: none;
+    color: #000;
 }
 
 a:hover {
-text-decoration: none;
-color: #000;
+    text-decoration: none;
+    color: #000;
 }
-.card {margin: 20px 0px;}
-.jumbotron {margin: 20px 0px; padding: 32px 16px;}
+
+.card {
+    margin: 20px 0px;
+}
+
+.jumbotron {
+    margin: 20px 0px;
+    padding: 32px 16px;
+}
 
 
 /* Sidebar */
 
-body{overflow-x: hidden;}
-    .content {
-  height: 100%;
-  width: 70%;
-  float: left;
-  top: 0;
-  overflow-x: hidden;
-  padding: 20px;
+body {
+    overflow-x: hidden;
 }
+
+.content {
+    height: 100%;
+    width: 70%;
+    float: left;
+    top: 0;
+    overflow-x: hidden;
+    padding: 20px;
+}
+
 .sidebar {
-  height: 100%;
-  width: 30%;
-  float: left;
-  top: 0;
-  overflow-x: hidden;
-  padding: 20px;
+    height: 100%;
+    width: 30%;
+    float: left;
+    top: 0;
+    overflow-x: hidden;
+    padding: 20px;
 }
 
 
+.sidebar a {
+    color: white;
+}
 
-.sidebar a {color: white;}
-.sidebar a:hover {color: red; transition-duration: 0.3s;}
+.sidebar a:hover {
+    color: red;
+    transition-duration: 0.3s;
+}
 
 @media only screen and (max-width: 700px) {
     .content {
-  height: 100%;
-  width: 100%;
-  position: relative;
-  overflow-x: hidden;
-  padding: 20px;
-}
-.sidebar {
-  height: 100%;
-  width: 100%;
-  position: relative;
-  overflow-x: hidden;
-  padding: 20px;
-}
-}
+        height: 100%;
+        width: 100%;
+        position: relative;
+        overflow-x: hidden;
+        padding: 20px;
+    }
 
+    .sidebar {
+        height: 100%;
+        width: 100%;
+        position: relative;
+        overflow-x: hidden;
+        padding: 20px;
+    }
+}
 
 
 /* ============= FOOTER STYLES ==============  */
- footer {min-height: 200px; background-color: black; padding: 50px; color: white; margin-top: 100px;}
-@media only screen and (max-width: 500px) {
-    footer {padding: 20px;}
+footer {
+    min-height: 200px;
+    background-color: black;
+    padding: 50px;
+    color: white;
+    margin-top: 100px;
 }
-.col-sm-4 {padding: 30px;}
-.col-sm-4 p {color: grey;}
-.fa-facebook:hover {color: #3b5998;}
-.fa-twitter:hover {color: #00acee;}
-.fa-youtube:hover {color: #FF0000;}
-.fa-instagram:hover {color:#8a3ab9;}
-.fa-facebook {margin-right: 30px; border-radius: 50%;font-size: 30px; cursor: pointer; transition-duration: 0.5s;}
-.fa-instagram {margin-right: 30px; border-radius: 50%;font-size: 30px; cursor: pointer; transition-duration: 0.5s;}
-.fa-twitter {margin-right: 30px; border-radius: 50%;font-size: 30px; cursor: pointer; transition-duration: 0.5s;}
-.fa-youtube {margin-right: 30px; border-radius: 50%;font-size: 30px; cursor: pointer; transition-duration: 0.5s;}
-.devider{border: 0;height: 3px; max-width: 120px; width: 100%; background: linear-gradient(to right, #0099ff 50%, #0099ff50 120%);}
-.header-devider{background: linear-gradient(to right, white 50%, #0099ff 120%);} /* changes color of hr tag on header */
-.content-body {min-height: 400px;}
+
+@media only screen and (max-width: 500px) {
+    footer {
+        padding: 20px;
+    }
+}
+
+.col-sm-4 {
+    padding: 30px;
+}
+
+.col-sm-4 p {
+    color: grey;
+}
+
+.fa-facebook:hover {
+    color: #3b5998;
+}
+
+.fa-twitter:hover {
+    color: #00acee;
+}
+
+.fa-youtube:hover {
+    color: #FF0000;
+}
+
+.fa-instagram:hover {
+    color: #8a3ab9;
+}
+
+.fa-facebook {
+    margin-right: 30px;
+    border-radius: 50%;
+    font-size: 30px;
+    cursor: pointer;
+    transition-duration: 0.5s;
+}
+
+.fa-instagram {
+    margin-right: 30px;
+    border-radius: 50%;
+    font-size: 30px;
+    cursor: pointer;
+    transition-duration: 0.5s;
+}
+
+.fa-twitter {
+    margin-right: 30px;
+    border-radius: 50%;
+    font-size: 30px;
+    cursor: pointer;
+    transition-duration: 0.5s;
+}
+
+.fa-youtube {
+    margin-right: 30px;
+    border-radius: 50%;
+    font-size: 30px;
+    cursor: pointer;
+    transition-duration: 0.5s;
+}
+
+.devider {
+    border: 0;
+    height: 3px;
+    max-width: 120px;
+    width: 100%;
+    background: linear-gradient(to right, #0099ff 50%, #0099ff50 120%);
+}
+
+.header-devider {
+    background: linear-gradient(to right, white 50%, #0099ff 120%);
+}
+
+/* changes color of hr tag on header */
+.content-body {
+    min-height: 400px;
+}
 
 
 /* ===================== FORM UI =============== */
-.form-input {  /* Input Form Styles */
-  box-shadow: none;
-  display: block;
-  width: 100%;
-  min-height: 60px;
-  padding: 18px 25px;
-  font-weight: 300;
-  line-height: 24px;
-  color: #29293a;
-  background-color: #f2f3f9;
-  background-image: none;
-  border: 0px solid #f2f3f9;
-  border-radius: 35px;
-  -webkit-appearance: none;
-  outline: none;
+.form-input { /* Input Form Styles */
+    box-shadow: none;
+    display: block;
+    width: 100%;
+    min-height: 60px;
+    padding: 18px 25px;
+    font-weight: 300;
+    line-height: 24px;
+    color: #29293a;
+    background-color: #f2f3f9;
+    background-image: none;
+    border: 0px solid #f2f3f9;
+    border-radius: 35px;
+    -webkit-appearance: none;
+    outline: none;
 }
-textarea.form-input {resize: vertical;}
+
+textarea.form-input {
+    resize: vertical;
+}
 
 
 /* ===================== TAG INPUT FIELD =====================  */
@@ -115,10 +210,12 @@ textarea.form-input {resize: vertical;}
     padding: 2px;
     border-radius: 4px;
 }
+
 .bootstrap-tagsinput .tag [data-role="remove"]:after {
     content: #10006;
     padding: 0px 2px;
 }
+
 ::placeholder {
     color: black;
     opacity: 0.5;
@@ -127,54 +224,123 @@ textarea.form-input {resize: vertical;}
 
 /* ======================= ASK A QUESTION SIDEBAR TAGS ================== */
 
-.pointer {cursor: pointer;}
+.pointer {
+    cursor: pointer;
+}
+
 .panel-title {
-  position: relative;
+    position: relative;
 }
 
 .panel-title::after {
-  content: "\f107";
-  color: #333;
-  top: -2px;
-  right: 0px;
-  position: absolute;
-  font-family: "FontAwesome"
+    content: "\f107";
+    color: #333;
+    top: -2px;
+    right: 0px;
+    position: absolute;
+    font-family: "FontAwesome"
 }
 
 .panel-title[aria-expanded="true"]::after {
-  content: "\f106";
+    content: "\f106";
 }
-p.panel-title{margin-bottom: 0;}
 
+p.panel-title {
+    margin-bottom: 0;
+}
 
 
 /* logo style */
 
-.logo {transition: transform .2s;}
+.logo {
+    transition: transform .2s;
+}
+
 .logo:hover {
     transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 
-blockquote{border-left: 4px solid gray; background: rgba(0,0,0,.03); padding-left: 2px;}
+blockquote {
+    border-left: 4px solid gray;
+    background: rgba(0, 0, 0, .03);
+    padding-left: 2px;
+}
 
-.transparent-button {background: transparent; border: none;font-size: 50px;}
-.comment-voting {width: 8%; float: left; text-align: center}
-.comment-body {width: 92%; float: left}
+.transparent-button {
+    background: transparent;
+    border: none;
+    font-size: 50px;
+}
+
+.comment-voting {
+    width: 8%;
+    float: left;
+    text-align: center
+}
+
+.comment-body {
+    width: 92%;
+    float: left
+}
+
 @media only screen and (max-width: 500px) {
-    .comment-voting {width: 12%; float: left; text-align: center}
-    .comment-body {width: 88%; float: left}
-}
-.post-likes {background-color: rgba(0,0,0,.09);; border-radius: 50%; padding: 2px 5px; font-size: 20px}
+    .comment-voting {
+        width: 12%;
+        float: left;
+        text-align: center
+    }
 
-pre {background-color: rgba(0,0,0,.06); padding: 5px}
-code { color: orange;}
+    .comment-body {
+        width: 88%;
+        float: left
+    }
+}
 
-    .scrolled-down{
-  transform:translateY(-100%); transition: all 0.3s ease-in-out;
+.post-likes {
+    background-color: rgba(0, 0, 0, .09);;
+    border-radius: 50%;
+    padding: 2px 5px;
+    font-size: 20px
 }
-.scrolled-up{
-  transform:translateY(0); transition: all 0.3s ease-in-out;
+
+pre {
+    background-color: rgba(0, 0, 0, .06);
+    padding: 5px
 }
-.navbar{position:fixed; top: 0; width: 100%}
-.search-input {border-radius: 0; border-top-left-radius: 3px; border-bottom-left-radius: 3px;}
-.search-input-button {border-radius: 0; border-top-right-radius: 3px; border-bottom-right-radius: 3px;}
+
+code {
+    color: orange;
+}
+
+.scrolled-down {
+    transform: translateY(-100%);
+    transition: all 0.3s ease-in-out;
+}
+
+.scrolled-up {
+    transform: translateY(0);
+    transition: all 0.3s ease-in-out;
+}
+
+.navbar {
+    position: fixed;
+    top: 0;
+    width: 100%
+}
+
+.search-input {
+    border-radius: 3px 0 0 3px;
+}
+
+.search-input-button {
+    border-radius: 0 3px 3px 0;
+}
+
+.s-link {
+    color: black;
+}
+
+.s-link:hover {
+    color: red;
+    transform: scale(1.006);
+}
