--- a/datadump/templates/datadump/base.html
+++ b/datadump/templates/datadump/base.html
@@ -29,14 +29,15 @@
 <body>
 <div class="content-body">
     {% if messages %}
-    {% for message in messages %}
-    <div class="alert alert-{% if message.tags %}{% if message.tags == 'error' %}danger{% else %}{{ message.tags }}{% endif %}{% endif %} alert-dismissible fade show" role="alert">
-        {{ message }}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    {% endfor %}
+        {% for message in messages %}
+            <div class="alert alert-{% if message.tags %}{% if message.tags == 'error' %}danger{% else %}{{ message.tags }}{% endif %}{% endif %} alert-dismissible fade show"
+                 role="alert">
+                {{ message }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        {% endfor %}
     {% endif %}
     <div class="row">
         <div id="content" class="content">
@@ -49,46 +50,9 @@
         </div>
     </div>
 </div>
+
 <footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4">
-                <a href="{% url 'datadump:post_list' %}" style="color: white;">BiblioStack</a> is the next platform to learn and help those
-                learning. We can add something else cause I don't
-                know
-                to say. But yeah, it's going to be great :)
-            </div>
-            <div class="col-sm-4">
-                Copyright © 2021 BiblioStack, Inc.
-            </div>
-            <div class="col-sm-4">
-                <span class="fa fa-facebook"></span>
-                <span class="fa fa-instagram"></span>
-                <span class="fa fa-youtube"></span>
-                <span class="fa fa-twitter"></span>
-            </div>
-            <div class="col-sm-4">
-                <h3>Bibliostack</h3>
-                <ul>
-                    <li>Company</li>
-                    <li>Our Team</li>
-                    <li>Our Process</li>
-                </ul>
-            </div>
-            <div class="col-sm-4">
-                <h3>Our Info</h3>
-                <p><span class="fa fa-phone"></span> +38344999999</p>
-                <p><span class="fa fa-envelope"></span> support@bibliostack.com</p>
-                <p><span class="fa fa-map-marker"></span> Prishtina, Kosovo</p>
-            </div>
-            <div class="col-sm-4">
-                <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">
-                    Contact Us
-                </button>
-                <small class="form-text text-muted">Send a direct message to our team!</small>
-            </div>
-        </div>
-    </div>
+    {% include "datadump/common/footer.html" %}
 </footer>
 
 
@@ -138,9 +102,11 @@
         </div>
     </div>
 </div>
+
 <nav class="autohide navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="{% url 'datadump:post_list' %}"><img src="{% static 'datadump/images/logo_bibliostack.png' %}"
-                                                  height="30px" class="logo"></a>
+    <a class="navbar-brand" href="{% url 'datadump:post_list' %}">
+        <img src="{% static 'datadump/images/logo_bibliostack.png' %}" height="30px" class="logo" alt="">
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -149,14 +115,15 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'datadump:post_list' %}">Home</a>
-
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'datadump:create_post' %}">Ask Question</a>
             </li>
         </ul>
         <ul class="navbar-nav">
             <form class="form-inline" method="get" action="{% url 'datadump:search_posts' %}">
-                <input class="form-control autocomplete search-input" type="search" placeholder="Search" aria-label="Search"
+                <input class="form-control autocomplete search-input" type="search" placeholder="Search"
+                       aria-label="Search"
                        name="search"
                        autocomplete="off"
                        value="{{ search }}" required id="search">
@@ -169,73 +136,72 @@
                 </button>
             </form>
             {% if user.is_authenticated %}
-            <li class="nav-item">
-                <a class="nav-link" style="cursor: pointer; margin: 0px 10px"><i class="fa fa-bell"></i></a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    <img src="{{ user.profile.image.url }}" height="25px" style="border-radius: 50%">
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="/accounts/profile/{{ user.id }}">Profile</a>
-                    <a class="dropdown-item" href="/accounts/logout">Log Out</a>
-                </div>
-            </li>
+                <li class="nav-item">
+                    <a class="nav-link" style="cursor: pointer; margin: 0px 10px"><i class="fa fa-bell"></i></a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="false">
+                        <img src="{{ user.profile.image.url }}" height="25px" style="border-radius: 50%">
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="/accounts/profile/{{ user.id }}">Profile</a>
+                        <a class="dropdown-item" href="/accounts/logout">Log Out</a>
+                    </div>
+                </li>
             {% else %}
-            <li class="nav-item">
-                <a class="nav-link" href="/accounts/login">Log In</a>
-            </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/accounts/login">Log In</a>
+                </li>
             {% endif %}
         </ul>
     </div>
 </nav>
 <script>
-    document.addEventListener("DOMContentLoaded", function(){
+    document.addEventListener("DOMContentLoaded", function () {
 
-  el_autohide = document.querySelector('.autohide');
-  body_content = document.querySelector('.content-body');
+        el_autohide = document.querySelector('.autohide');
+        body_content = document.querySelector('.content-body');
 
-  // add padding-top to bady (if necessary)
-  navbar_height = document.querySelector('.navbar').offsetHeight;
-  body_content.style.paddingTop = navbar_height + 'px';
+        // add padding-top to bady (if necessary)
+        navbar_height = document.querySelector('.navbar').offsetHeight;
+        body_content.style.paddingTop = navbar_height + 'px';
 
-  if(el_autohide){
-    var last_scroll_top = 0;
-    window.addEventListener('scroll', function() {
-          let scroll_top = window.scrollY;
-         if(scroll_top < last_scroll_top) {
-              el_autohide.classList.remove('scrolled-down');
-              el_autohide.classList.add('scrolled-up');
-          }
-          else {
-              el_autohide.classList.remove('scrolled-up');
-              el_autohide.classList.add('scrolled-down');
-          }
-          last_scroll_top = scroll_top;
+        if (el_autohide) {
+            var last_scroll_top = 0;
+            window.addEventListener('scroll', function () {
+                let scroll_top = window.scrollY;
+                if (scroll_top < last_scroll_top) {
+                    el_autohide.classList.remove('scrolled-down');
+                    el_autohide.classList.add('scrolled-up');
+                } else {
+                    el_autohide.classList.remove('scrolled-up');
+                    el_autohide.classList.add('scrolled-down');
+                }
+                last_scroll_top = scroll_top;
+            });
+            // window.addEventListener
+        }
+        // if
+
     });
-    // window.addEventListener
-  }
-  // if
-
-});
 </script>
 <script>
-$(function() {
-    var availableTags = [{% for item in all_posts %}"{{ item.title }}",{% endfor%}
-    ];
-   $("#search").autocomplete({
-    source: availableTags
-  });
-  });
+    $(function () {
+        var availableTags = [{% for item in all_posts %}"{{ item.title }}",{% endfor%}
+        ];
+        $("#search").autocomplete({
+            source: availableTags
+        });
+    });
 </script>
 <script src="{% static 'datadump/tagsinput/bootstrap-tagsinput.min.js' %}"></script>
 <script src="{% static 'datadump/tagsinput/bootstrap-tagsinput-angular.min.js' %}"></script>
 <script>
     $('input#id_tags').tagsinput({
-  confirmKeys: [32, 44],
-  maxTags: 5
-});
+        confirmKeys: [32, 44],
+        maxTags: 5
+    });
 
 </script>
 </body>
