--- a/datadump/templates/datadump/post/list.html
+++ b/datadump/templates/datadump/post/list.html
@@ -34,45 +34,5 @@
 {% include "pagination.html" with page=posts %}
 {% endblock %}
 {% block sidebar %}
-<div class="container my-4">
-    <div class="card bg-dark text-white">
-        <div class="card-header">
-            <h3>Latest Posts</h3>
-        </div>
-        <div class="card-body">
-            {% get_latest_posts 5 as posts %}
-            {% for post in posts %}
-            <a href="{{ post.get_absolute_url }}">
-                <p>• {{ post.title }}</p>
-            </a>
-            {% endfor %}
-        </div>
-    </div>
-    <div class="card bg-info text-white">
-        <div class="card-header">
-            <h3>Top Used Tags</h3>
-        </div>
-        <div class="card-body">
-            {% get_most_tags 5 as tags %}
-            {% for item in tags %}
-            <a href="{% url 'datadump:post_list_tag' item.slug %}">
-                <p>• {{ item.name }}</p>
-            </a>
-            {% endfor %}
-        </div>
-    </div>
-    <div class="card bg-warning text-white">
-        <div class="card-header">
-            <h3>Top Commented Posts</h3>
-        </div>
-        <div class="card-body">
-            {% get_most_commented_posts 5 as comments %}
-            {% for post in comments %}
-            <a href="{{ post.get_absolute_url }}">
-                <p>• {{ post.title }}</p>
-            </a>
-            {% endfor %}
-        </div>
-    </div>
-</div>
+    {% include "datadump/common/sidebar.html" %}
 {% endblock %}
