--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -2,6 +2,7 @@
 {% block title %}Log In {% endblock %}
 {% load static %}
 {% block content %}
+
 <link rel="stylesheet" href="{% static 'datadump/styles/login-form.css' %}">
 {% if form.errors %}
 <div class="alert alert-danger alert-dismissible fade show" role="alert">
@@ -11,6 +12,14 @@
     </button>
 </div>
 {% endif %}
+<a href="{% url 'datadump:post_list' %}">
+    <button type="button" class="btn btn-light">
+        <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
+  <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
+</svg>
+    </button>
+</a>
 <main class="main">
     <div class="form-container">
         <section class="wrapper">
@@ -44,6 +53,7 @@
                         <span>Sign in with Google</span>
                     </a>
                 </div>
+
                 <div class="method-control">
                     <a href="#" class="method-action">
                         <i class="fa fa-facebook login-icon-facebook"></i>
