fix: login & register page

--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -1,74 +1,74 @@
-{% extends "datadump/base.html" %}
+{% extends "layout.html" %}
 {% block title %}Register {% endblock %}
 {% load static %}
 {% block content %}
-<link rel="stylesheet" href="{% static 'datadump/styles/login-form.css' %}">
-{% if form.errors %}
+    <link rel="stylesheet" href="{% static 'accounts/css/login-form.css' %}">
+    {% if form.errors %}
 
         <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        {% for field in form %}
-        {% if field.errors %}
-        {% for error in field.errors %}
-            <p>{{ error|escape }}</p>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        {% endfor %}
-        {% endif %}
-        {% endfor %}
+            {% for field in form %}
+                {% if field.errors %}
+                    {% for error in field.errors %}
+                        <p>{{ error|escape }}</p>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    {% endfor %}
+                {% endif %}
+            {% endfor %}
 
         </div>
-{% endif %}
-<main class="main">
-    <div class="form-container">
-        <section class="wrapper">
-            <div class="heading">
-                <h1 class="text text-large">Register Now</h1>
-            </div>
-            <form name="login" class="form" method="POST">
-                {% csrf_token %}
-                {% for item in form %}
-                <div class="input-control">
-                    {{ item }}
+    {% endif %}
+    <main class="main">
+        <div class="form-container">
+            <section class="wrapper">
+                <div class="heading">
+                    <h1 class="text text-large">Register Now</h1>
                 </div>
-                {% endfor %}
-                <div class="input-control">
-                    <small>Already a user?<a href="{% url 'login' %}" class="text text-links"> Log In</a></small>
-                    <button type="submit" name="submit" class="input-submit">Register</button>
+                <form name="login" class="form" method="POST">
+                    {% csrf_token %}
+                    {% for item in form %}
+                        <div class="input-control">
+                            {{ item }}
+                        </div>
+                    {% endfor %}
+                    <div class="input-control">
+                        <small>Already a user?<a href="{% url 'login' %}" class="text text-links"> Log In</a></small>
+                        <button type="submit" name="submit" class="input-submit">Register</button>
+                    </div>
+                </form>
+                <div class="striped">
+                    <span class="striped-line"></span>
+                    <span class="striped-text">Or</span>
+                    <span class="striped-line"></span>
                 </div>
-            </form>
-            <div class="striped">
-                <span class="striped-line"></span>
-                <span class="striped-text">Or</span>
-                <span class="striped-line"></span>
-            </div>
-            <div class="method">
-                <div class="method-control">
-                    <a href="#" class="method-action">
-                        <i class="fa fa-google login-icon-google"></i>
-                        <span>Register with Google</span>
-                    </a>
+                <div class="method">
+                    <div class="method-control">
+                        <a href="#" class="method-action">
+                            <i class="fa fa-google login-icon-google"></i>
+                            <span>Register with Google</span>
+                        </a>
+                    </div>
+                    <div class="method-control">
+                        <a href="#" class="method-action">
+                            <i class="fa fa-facebook login-icon-facebook"></i>
+                            <span>Register with Facebook</span>
+                        </a>
+                    </div>
                 </div>
-                <div class="method-control">
-                    <a href="#" class="method-action">
-                        <i class="fa fa-facebook login-icon-facebook"></i>
-                        <span>Register with Facebook</span>
-                    </a>
-                </div>
-            </div>
-        </section>
-    </div>
-</main>
-<script>
-    $(document).ready(function(){
-        $("#id_first_name").attr('placeholder', 'First Name');
-        $("#id_last_name").attr('placeholder', 'Last Name');
-        $("#id_email").attr('placeholder', 'Email');
-        $("#id_username").attr('placeholder', 'Username');
-        $("#id_password1").attr('placeholder', 'Password');
-        $("#id_password2").attr('placeholder', 'Confirm Password');
-    });
+            </section>
+        </div>
+    </main>
+    <script>
+        $(document).ready(function () {
+            $("#id_first_name").attr('placeholder', 'First Name');
+            $("#id_last_name").attr('placeholder', 'Last Name');
+            $("#id_email").attr('placeholder', 'Email');
+            $("#id_username").attr('placeholder', 'Username');
+            $("#id_password1").attr('placeholder', 'Password');
+            $("#id_password2").attr('placeholder', 'Confirm Password');
+        });
 
-</script>
-</script>
+    </script>
+    </script>
 {% endblock content %}
