--- a/datadump/templates/datadump/common/team.html
+++ b/datadump/templates/datadump/common/team.html
@@ -12,7 +12,7 @@
                     <img src="{% static "datadump/images/fbpic.png" %}" class="card-img-top" alt="Employee image">
                     <div class="card-body">
                         <h4 class="card-title">Gentian Demaj</h4>
-                        <h5 class="card-text">Team Leader</h5>
+                        <h5 class="card-text">Tech Lead</h5>
                         <p class="card-text">He's a math enthusiast and he likes chess, books and movies.</p>
                     </div>
                 </div>
@@ -22,7 +22,7 @@
                     <img src="{% static "datadump/images/fbpic.png" %}" class="card-img-top" alt="Employee image">
                     <div class="card-body">
                         <h4 class="card-title">Eol Nuha</h4>
-                        <h5 class="card-text">Software Developer</h5>
+                        <h5 class="card-text">Developer</h5>
                         <p class="card-text">
                             A passionate Python developer, his experience includes backend development.
                         </p>
@@ -33,8 +33,8 @@
                 <div class="card shadow border-0 rounded h-100">
                     <img src="{% static "datadump/images/fbpic.png" %}" class="card-img-top" alt="Employee image">
                     <div class="card-body">
-                        <h3 class="card-title">Teuta Hoti</h3>
-                        <h5 class="card-text">Software Developer</h5>
+                        <h4 class="card-title">Teuta Hoti</h4>
+                        <h5 class="card-text">Developer</h5>
                         <p class="card-text">
                             She likes to make sure that the code is clean, reusable, and consistent across the site.
                         </p>
@@ -45,8 +45,8 @@
                 <div class="card shadow border-0 h-100">
                     <img src="{% static "datadump/images/fbpic.png" %}" class="card-img-top" alt="Employee image">
                     <div class="card-body">
-                        <h3 class="card-title text-normal">Dren Ibrahimi</h3>
-                        <h5 class="card-title">Software Developer</h5>
+                        <h4 class="card-title text-normal">Dren Ibrahimi</h4>
+                        <h5 class="card-title">Developer</h5>
                         <p class="card-text">A Python Developer focused on crafting great web experiences.</p>
                     </div>
                 </div>
